# kop-utility

./: README.md  setup.cfg
src/utility/: eloomi_connection.py  eloomi_utility.py  logger.py  name_changes.py  nightingale_connection.py  sql_connection.py
