[metadata]
name = kop-utility
version = 0.1.10
author = Mikael Máni
author_email = mikaelmani@kopavogur.is
description = A python utility package for kópavogur
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kop-mikki/kop-utility
project_urls =
    Bug Tracker = https://github.com/kop-mikki/kop-utility/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src